--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,12 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #09d3ac;
+.main {
+  /* background-color: aquamarine;
+  position: relative; */
+  width: 100%;
+  /* flex: auto; */
+  height: 150vh;
+  background-image: url(./assets/bg.jpg);
+  background-size: cover;
+  overflow: hidden;
+  /* opacity: .5; */
+  background-position: initial;
 }
