--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
   position: relative; */
   width: 100%;
   /* flex: auto; */
-  height: 150vh;
+  /* height: 150vh; */
   background-image: url(./assets/bg.jpg);
   background-size: cover;
   overflow: hidden;
