--- a/src/component/Style.css
+++ b/src/component/Style.css
@@ -79,8 +79,10 @@
     }
 }
 
+/* skill component */
+
 .skill {
-    background-color: rgba(255, 255, 255, 0.881);
+    background-color: rgba(255, 255, 255, 0.924);
     margin: 0px;
     width: 100%;
     display: flex;
@@ -157,3 +159,57 @@
     
 }
 
+/* About component  */
+
+.about {
+    width: 100%;
+    background: #5c5874ea;
+    /* position: absolute; */
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
+.aboutHeading {
+    font-size: 36px;
+    font-weight: bold;
+    margin: 60px 0px;
+    color: beige;
+}
+
+.profileImageDiv {
+    background-color: #c8c4cf;
+    border-radius: 100%;
+    overflow: hidden;
+    margin: 36px;
+}
+
+.profileImage {
+    height: 200px;
+    width: 200px;
+}
+
+.name {
+    font-size: 24px;
+    font-weight: bold;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    margin-bottom: 0px;
+}
+
+.languges {
+    font-size: 18px;
+    color: lightgrey;
+    /* font-family: ita; */
+    margin-top: 0px;
+    font-weight: 400;
+    margin-bottom: 40px;
+}
+
+.aboutDetail {
+    width: 70%;
+    text-align: center;
+    font-size: 18px;
+    color: lightgrey;
+}
