--- a/src/component/Style.css
+++ b/src/component/Style.css
@@ -176,6 +176,13 @@
         font-size: 18px;
         text-align: center;
     }
+    .gitBtn {
+        font-size: 24px;
+        font-weight: 600;
+        color: white;
+        width: 33%;
+        padding: 4px;
+    }
 
 }
 
@@ -271,4 +278,169 @@
         height: 100%;
         right: 0;
     }
+}
+
+/* Project  */
+
+.repo {
+    padding: 80px 0px 100px 0px;
+    display: flexbox;
+    background-color: rgba(255, 255, 255, 0.924);
+    width: 100%;
+}
+
+.repoMain {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    flex-direction: row;
+    justify-content: space-evenly;
+    /* align-items: center; */
+    /* background-color: rgba(255, 255, 255, 0.924); */
+    margin: 0px;
+
+}
+
+.projectHeading {
+    text-align: center;
+    font-size: 36px;
+    font-weight: bold;
+    margin-bottom: 80px;
+    color: black;
+    margin-top: 0px;
+}
+
+.repo-card-div {
+    color: rgb(88, 96, 105);
+    background-color: rgba(255, 255, 255, 0.924);
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 10px 30px -15px;
+    padding: 2rem;
+    cursor: pointer;
+    width: 40%;
+}
+.repo-card-div:hover {
+    box-shadow: rgba(0, 0, 0, 0.9) 0px 20px 30px -10px;
+}
+
+.repo-stats {
+    display: flex;
+    -webkit-box-pack: justify;
+    justify-content: space-between;
+    font-size: 13px;
+    color: rgb(106, 115, 125);
+}
+
+.repo-left-stat {
+    -webkit-box-flex: 1;
+    flex-grow: 1;
+    display: flex;
+}
+
+.language-color {
+    width: 10px;
+    height: 10px;
+    background-color: blue;
+    margin-right: 0.25rem;
+    border-radius: 100%;
+}
+
+.repo-left-stat span {
+    display: flex;
+    -webkit-box-align: center;
+    align-items: center;
+    margin-right: 0.75rem;
+}
+
+.repo-name-div {
+    display: flex;
+    align-items: center;
+}
+
+.repo-svg {
+    margin-right: 0.5rem;
+    min-width: 16px;
+}
+
+.repo-name {
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    color: rgb(36, 41, 46);
+    margin-bottom: 0.75rem;
+    font-size: 25px;
+    font-weight: 700;
+    letter-spacing: -0.5px;
+    overflow: hidden;
+    margin: 0px;
+}
+
+.repo-star-svg {
+    margin-right: 0.3rem;
+}
+
+.gitDiv {
+    text-align: center;
+    width: 100%;
+    margin-top: 120px;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+}
+
+.gitBtn {
+    text-align: center;
+    font-size: 28px;
+    font-weight: 600;
+    color: white;
+    background-color: #5c5874c9;
+    width: 22%;
+    margin: 0px;
+    padding: 4px;
+    cursor: pointer;
+    border-radius: 6px;
+    overflow: hidden;
+}
+
+.gitBtn:hover {
+    color: rgb(88, 96, 105);
+    background-color: rgba(255, 255, 255, 0.924);
+    box-shadow: rgba(0, 0, 0, 0.7) 0px 10px 30px -15px;
+    color: black;
+
+}
+
+  @media(max-width: 980px) {
+    .repo-card-div {
+        color: rgb(88, 96, 105);
+        background-color: rgba(255, 255, 255, 0.924);
+        box-shadow: rgba(0, 0, 0, 0.5) 0px 10px 30px -15px;
+        padding: 1rem;
+        cursor: pointer;
+        width: 95%;
+    }
+    .projectHeading {
+        text-align: center;
+        font-size: 32px;
+        font-weight: bold;
+        margin-bottom: 80px;
+        color: black;
+        margin-top: 0px;
+    }
+    .gitBtn {
+        font-size: 28px;
+        font-weight: 600;
+        color: white;
+        width: 40%;
+        padding: 4px;
+    }
+}
+
+@media screen and (max-width: 550px) {
+    .gitBtn {
+        font-size: 24px;
+        font-weight: 600;
+        color: white;
+        width: 70%;
+        padding: 4px;
+    }
+
 }
