--- a/src/component/Style.css
+++ b/src/component/Style.css
@@ -196,7 +196,7 @@
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    padding: 30px 0px;
+    padding: 30px 0px 90px 0px;
 }
 
 .aboutHeading {
