--- a/src/component/Style.css
+++ b/src/component/Style.css
@@ -6,15 +6,23 @@
     display: flex;
     justify-content: space-between;
 }
-#namefont{
-    font-family: 'Agustina Regular';
-    color: beige;
+
+.aTag {
+    text-decoration-line: none;
+    color: white;
 }
+
+#namefont {
+    font-family: 'Agustina Regular';
+    color: white;
+}
+
 .headerName {
     font-size: 20px;
     padding: 0px 20px;
-    color: beige;
+    color: white;
 }
+
 
 .logoName {
     /* display: block; */
@@ -54,7 +62,7 @@
     .headerName {
         font-size: 20px;
         padding: 0px 20px;
-        color: beige;
+        color: white;
     }
     .rightSide {
         display: none;
@@ -83,7 +91,7 @@
     .headerName {
         font-size: 18px;
         padding: 0px 12px;
-        color: beige;
+        color: white;
     }
     
 }
@@ -203,7 +211,7 @@
     font-size: 36px;
     font-weight: bold;
     margin: 60px 0px;
-    color: beige;
+    color: white;
 }
 
 .profileImageDiv {
@@ -251,6 +259,7 @@
     justify-content: center;
     flex-direction: column;
     height: 100%;
+    transition: 1s;
 }
 
 .socialIcon {
@@ -277,6 +286,8 @@
         flex-direction: column;
         height: 100%;
         right: 0;
+        transition: 1s;
+
     }
 }
 
@@ -399,7 +410,7 @@
     cursor: pointer;
     border-radius: 6px;
     overflow: hidden;
-    box-shadow: rgba(0, 0, 0, 0.5) 0px 15px 20px -5px;
+    box-shadow: rgba(0, 0, 0, 0.5) 0px 5px 5px -5px;
 
 }
 
