--- a/src/component/Style.css
+++ b/src/component/Style.css
@@ -331,7 +331,7 @@
     width: 40%;
 }
 .repo-card-div:hover {
-    box-shadow: rgba(0, 0, 0, 0.9) 0px 20px 30px -10px;
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 5px 25px -5px;
 }
 
 .repo-stats {
@@ -392,7 +392,7 @@
 .gitDiv {
     text-align: center;
     width: 100%;
-    margin-top: 120px;
+    margin-top: 80px;
     align-items: center;
     justify-content: center;
     display: flex;
@@ -400,18 +400,20 @@
 
 .gitBtn {
     text-align: center;
-    font-size: 28px;
+    font-size: 26px;
     font-weight: 600;
     color: white;
     background-color: #5c5874c9;
-    width: 22%;
+    width: 20%;
     margin: 0px;
     padding: 4px;
     cursor: pointer;
     border-radius: 6px;
     overflow: hidden;
     box-shadow: rgba(0, 0, 0, 0.5) 0px 5px 5px -5px;
-
+    letter-spacing: -0.3px;
+    border: 0.5px solid  #5c5874c9;
+    transition: 0.5s;
 }
 
 .gitBtn:hover {
@@ -419,6 +421,7 @@
     background-color: rgba(255, 255, 255, 0.924);
     box-shadow: rgba(0, 0, 0, 0.8) 0px 10px 30px -15px;
     color: black;
+    transition: 0.5s;
 
 }
 
@@ -433,7 +436,7 @@
     }
     .projectHeading {
         text-align: center;
-        font-size: 32px;
+        font-size: 30px;
         font-weight: bold;
         margin-bottom: 80px;
         color: black;
@@ -469,14 +472,14 @@
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    padding: 30px 0px 90px;
+    padding: 0px 0px 90px;
     
 }
 
 .AchievementsHeading {
     font-size: 36px;
     font-weight: bold;
-    margin: 60px 0px;
+    margin: 70px 0px;
     color: white;
 }
 
@@ -514,17 +517,20 @@
 }
 
 .viewBtn {
-    width: 30%;
-    font-size: 18px;
+    width: 20%;
+    font-size: 16px;
     font-weight: 700;
     text-align: center;
     border-radius: 6px;
     cursor: pointer;
+    padding: 4px;
+    letter-spacing: -0.3px;
 }
 
 .viewBtn:hover {
-    background-color: #5c5874ce;
+    transition: 0.5s;
     color: white;
+    background-color: #5c5874ce;
 }
 
 @media(max-width: 1050px) {
@@ -598,6 +604,7 @@
     margin: 10px;
     color: black;
     text-align: center;
+    letter-spacing: -0.5px;
 }
 
 .made {
@@ -606,13 +613,14 @@
     padding: 100px 0px 0px 0px;
     width: 90%;
     text-align: center;
+    letter-spacing: -0.5px;
 }
 
 @media(max-width: 600px) {
     
     .contact {
-        font-size: 24px;
-        font-weight: bold;
+        font-size: 20px;
+        font-weight: '600';
         margin: 10px;
         color: black;
         text-align: center;
